# deformation-intent-mcp

./: README.md  deformation_intent.py  pyproject.toml
src/deformation_intent_mcp/: __init__.py  server.py
src/ologs/: deformation_intent.yaml
