[project]
name = "deformation-intent"
version = "2.7.0"
description = "Deformation Intent MCP Server — classifies deformation aesthetics, generates rhythmic trajectories and visualization prompts for the Lushy brick cascade"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dal Marsters" },
]
keywords = [
    "mcp",
    "lushy",
    "aesthetic-dynamics",
    "deformation",
    "catastrophe-theory",
    "prompt-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
deformation-intent = "server:create_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.fastmcp]
name = "deformation-intent"
description = "Classify deformation intent and generate rhythmic aesthetic trajectories"
entry_point = "server:create_server"

[tool.fastmcp.resources]
include = ["ologs/*.yaml"]
